package com.directi.training.dip.exercice_refactored;

public interface Encoder {

    String encode(String data);

}
