package com.directi.training.dip.exercice_refactored;

public interface FileEncoder extends Encoder {
    
}
