package com.directi.training.dip.exercice_refactored;

public interface IDataBase {
    int write (String inputString);
    
} 