package com.directi.training.dip.exercice_refactored;

public interface NetworkEncoder extends Encoder {
    
}
